--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <h1 class="fw-bold">Je suis Lula Jonathan MBECK MBOH</h1><hr>
               <h2>Développeur logiciel</h2>
               <h2>Étudiant-ingénieur en informatique</h2>
-              <h2 class="fw-light">Bienvenue dans mon univers créatif</h2>
+              <h2 class="fw-light">Bienvenue sur mon portfolio</h2>
               <a href="#expertise" class="btn btn-primary mt-5">Mes compétences</a>
             </div>
             <div class="col-12 col-md-6">
@@ -100,7 +100,7 @@
                   <div class="col">
                     <div class="progress">
                       <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0"
-                        aria-valuemax="100" data-bs-toggle="tooltip" title="50%">
+                        aria-valuemax="100" data-bs-toggle="tooltip" title="">
                       </div>
                     </div>
                   </div>
@@ -336,7 +336,7 @@
             <!-- TSN -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
               <div class="card">
-                <img src="img/TSN/1.png" width="150" height="150" class="card-img-top px-2 py-2" alt="projet 1">
+                <img src="img/TSN/4.png" width="150" height="150" class="card-img-top px-2 py-2" alt="projet 1">
                 <div class="card-body">
                   <h5 class="card-title">The Social Network</h5>
                   <p class="card-text my-3">
@@ -355,7 +355,7 @@
                         <div class="carousel-inner h-100">
                               <div class="carousel-item h-100 active" data-bs-interval="10000">
                                   <img src="img/TSN/1.png"
-                                        class="d-block w-100 h-100 img-fluid" alt="Image slide 1">
+                                        class="d-block w-100" alt="Image slide 1">
                                   <!-- <div class="carousel-caption d-none d-md-block">
                                       <h5>Slide 1</h5>
                                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
@@ -363,7 +363,7 @@
                                   </div> -->
                               </div>
                               <div class="carousel-item h-100" data-bs-interval="2000">
-                                  <img src="https://picsum.photos/1920/1080?random=21"
+                                  <img src="img/TSN/2.png"
                                         class="d-block w-100" alt="Image slide 2">
                                   <!-- <div class="carousel-caption d-none d-md-block">
                                       <h5>Slide 2</h5>
@@ -372,7 +372,7 @@
                                   </div> -->
                               </div>
                               <div class="carousel-item h-100">
-                                  <img src="https://picsum.photos/1920/1080?random=31"
+                                  <img src="img/TSN/3.png"
                                         class="d-block w-100" alt="Image slide 3">
                                   <!-- <div class="carousel-caption d-none d-md-block">
                                       <h5>Slide 3</h5>
@@ -402,7 +402,7 @@
             <!-- TSN-2.0 -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
               <div class="card">
-                <img src="img/TSN-2.0/2.png" width="150" height="150" class="card-img-top px-2 py-2" alt="projet 2">
+                <img src="img/TSN-2.0/1.png" width="150" height="150" class="card-img-top px-2 py-2" alt="projet 2">
                 <div class="card-body">
                   <h5 class="card-title">The Social Network - 2.0</h5>
                   <p class="card-text my-3">
@@ -420,8 +420,8 @@
                       <div id="carouselProject2" class="carousel slide shadow h-100" data-bs-ride="carousel" data-bs-touch="true">
                         <div class="carousel-inner h-100">
                               <div class="carousel-item h-100 active" data-bs-interval="10000">
-                                  <img src="img/TSN-2.0/2.png"
-                                        class="d-block w-100 h-100 img-fluid" alt="Image slide 1">
+                                  <img src="img/TSN-2.0/3.png"
+                                        class="d-block w-100" alt="Image slide 1">
                                   <!-- <div class="carousel-caption d-none d-md-block">
                                       <h5>Slide 1</h5>
                                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
@@ -429,7 +429,7 @@
                                   </div> -->
                               </div>
                               <div class="carousel-item h-100" data-bs-interval="2000">
-                                  <img src="https://picsum.photos/1920/1080?random=21"
+                                  <img src="img/TSN-2.0/2.png"
                                         class="d-block w-100" alt="Image slide 2">
                                   <!-- <div class="carousel-caption d-none d-md-block">
                                       <h5>Slide 2</h5>
@@ -438,7 +438,7 @@
                                   </div> -->
                               </div>
                               <div class="carousel-item h-100">
-                                  <img src="https://picsum.photos/1920/1080?random=31"
+                                  <img src="img/TSN-2.0/4.png"
                                         class="d-block w-100" alt="Image slide 3">
                                   <!-- <div class="carousel-caption d-none d-md-block">
                                       <h5>Slide 3</h5>
@@ -472,7 +472,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Itinerary planner</h5>
                   <p class="card-text my-3">
-                    Un logiciel de calcul d'itinéraires dans la ville de belfort et la région de bourgogne.
+                    Un logiciel de calcul d'itinéraires dans la ville de belfort et la région de bourgogne-franche-comté.
                   </p>
                   <!-- Offcanvas -->
                   <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet3" aria-controls="offcanvasBottom">Voir plus</button>
@@ -487,7 +487,7 @@
                         <div class="carousel-inner h-100">
                               <div class="carousel-item h-100 active" data-bs-interval="10000">
                                   <img src="img/IP/1.png"
-                                        class="d-block w-100 h-100 img-fluid" alt="Image slide 1">
+                                        class="d-block w-100" alt="Image slide 1">
                                   <!-- <div class="carousel-caption d-none d-md-block">
                                       <h5>Slide 1</h5>
                                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
@@ -496,7 +496,7 @@
                               </div>
                               <div class="carousel-item h-100" data-bs-interval="2000">
                                   <img src="img/IP/2.png"
-                                        class="d-block w-100 h-100 img-fluid" alt="Image slide 2">
+                                        class="d-block w-100" alt="Image slide 2">
                                   <div class="carousel-caption d-none d-md-block">
                                       <!-- <h5>Slide 2</h5>
                                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
@@ -505,7 +505,7 @@
                               </div>
                               <div class="carousel-item h-100">
                                   <img src="img/IP/3.png"
-                                        class="d-block w-100 h-100 img-fluid" alt="Image slide 3">
+                                        class="d-block w-100" alt="Image slide 3">
                                   <div class="carousel-caption d-none d-md-block">
                                       <!-- <h5>Slide 3</h5>
                                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
@@ -548,13 +548,63 @@
           <div class="d-flex justify-content-center align-items-center">
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card">
-              <img src="img/" width="150" height="150" class="card-img-top px-2 py-2" alt="image IPM">
+              <img src="img/IPM/1.png" width="150" height="150" class="card-img-top px-2 py-2" alt="image IPM">
               <div class="card-body">
                 <h5 class="card-title">Internship-Project-Manager</h5>
                 <p class="card-text my-3">
                   Une application web de gestion et de suivi des projets de stage.
                 </p>
-                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet3" aria-controls="offcanvasBottom">Voir plus</button>
+                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojetStage" aria-controls="offcanvasBottom">Voir plus</button>
+                <div class="offcanvas offcanvas-bottom h-100" tabindex="-1" id="infoprojetStage" aria-labelledby="offcanvasBottomLabel">
+                  <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasBottomLabel">Internship-Project-Manager</h5>
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                  </div>
+                  <div class="offcanvas-body">
+                    <!-- Caroussel -->
+                    <div id="carouselProjectStage" class="carousel slide shadow h-100" data-bs-ride="carousel" data-bs-touch="true">
+                      <div class="carousel-inner h-100">
+                            <div class="carousel-item h-100 active" data-bs-interval="10000">
+                                <img src="img/IPM/2.png"
+                                      class="d-block w-100" alt="Image slide 1">
+                                <!-- <div class="carousel-caption d-none d-md-block">
+                                    <h5>Slide 1</h5>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                                        sollicitudin.</p>
+                                </div> -->
+                            </div>
+                            <div class="carousel-item h-100" data-bs-interval="2000">
+                                <img src="img/IPM/3.png"
+                                      class="d-block w-100" alt="Image slide 2">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <!-- <h5>Slide 2</h5>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                                        sollicitudin.</p> -->
+                                </div>
+                            </div>
+                            <div class="carousel-item h-100">
+                                <img src="img/IPM/4.png"
+                                      class="d-block w-100" alt="Image slide 3">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <!-- <h5>Slide 3</h5>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                                        sollicitudin.</p> -->
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button"
+                                data-bs-target="#carouselProjectStage" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button"
+                                data-bs-target="#carouselProjectStage" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
